tests/baselines/reference/destructuringInForIn.errors.txt
tests/cases/compiler/destructuringInForIn.ts(1,10): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.


==== tests/cases/compiler/destructuringInForIn.ts (1 errors) ====
    for (let {toString, toLowerCase} in []) {}
             ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.